--- a/Serilog/Serilog/Views/Home/Privacy.cshtml
+++ b/Serilog/Serilog/Views/Home/Privacy.cshtml
@@ -2,5 +2,7 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
-Privacy Policy content goes here.
-<p>Use this page to detail your site's privacy policy.</p>
+
+<p>
+    Privacy Policy content goes here.
+    Use this page to detail your site's privacy policy.</p>
