--- a/Serilog/Serilog/Views/_ViewImports.cshtml
+++ b/Serilog/Serilog/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Serilog
-@using Serilog.Models
+﻿@using SerilogDemo
+@using SerilogDemo.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
